some changes shamnad pointed out is fixed some are still to be fixed

--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,7 @@ table {
 }
 .select-control{
     position: relative;
+    clear: both;
 }
 .select-control .form-control{
     -webkit-appearance: none;
